--- a/index.html
+++ b/index.html
@@ -7,24 +7,66 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" type="text/css" href="main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
-    <script type="text/javascript" src="main.js"></script>
+
+    <script type="text/javascript" src="js/main.js"></script>
+    <!--easing plugin for smooth scroll-->
+    <script src="intro/js/jquery.easing.1.3.min.js" type="text/javascript"></script>
+    <script src="intro/js/jquery.backstretch.min.js" type="text/javascript"></script>
 </head>
 
 <body>
+
+    <!--Intro Container -->
+    <div id="intro-container">
+        <div class="logo-img">
+            <img class="logo-img" src="intro/images/logo-white.png" width="200" alt="Logo Image">
+            <h1 class="logo">Novium</h1>
+            <h2 class="info-title">Lorem Ipsum</h2>
+        </div>
+        <div class="info-text">
+            <p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry used since long</p>
+        </div>
+
+        <h4 id="message">The standard chunk of Ipsum</h4>
+
+        <form id="notifyMeForm" class="form-inline" role="form" method="POST" action="/notifyme">
+            <input type="hidden" name="_csrf_token" value="0a8f2772">
+            <div class="inline">
+                <span class="form-group">
+                    <label class="sr-only" for="email"></label>
+                    <input type="email" class="email-input" id="email" name="email" placeholder="Enter your email">
+                </span>
+                <button type="submit" class="btn-white-border">Notify me</button>
+            </div>
+        </form>
+
+        <div id="intro-footer">
+            <div class="center">
+                <a href="https://facebook.com/noviumcollective"><img src="intro/images/facebook-logo.svg" class="facebook"></a>
+                <a href="https://twitter.com/novium_inc"><img src="intro/images/twitter-logo.svg" class="twitter"></a>
+                <a href="https://www.linkedin.com/uas/login"><img src="intro/images/linkedin-logo.svg" class="linkedin"></a>
+            </div>
+            <div class="copyright">
+                <small class="copyright">&copy;2016 &copy; Novium Inc.</small>
+            </div>
+        </div>
+    </div>
+    <!-- End of Intro Container -->
+
     <div class="header-container">
         <div class="nav-content">
             <div class="navbar-position">
-             <img src="images/novium-logo.svg" class="logo-header">
-             <h1 class="inline novium-title">NOVIUM</h1>
-         </div>
+               <img src="images/novium-logo.svg" class="logo">
+               <h1 class="inline novium-title">NOVIUM</h1>
+           </div>
 
-         <div class="navbar-buttons">
+           <div class="navbar-buttons">
             <nav>
                 <ul>
                     <li><a href="#who-we-are"> WHO WE ARE &nbsp</a></li>
                     <li><a href="#services">|&nbsp SERVICES &nbsp</a> </li>
                     <li><a href="#projects">|&nbsp PROJECTS &nbsp</a></li>
-                    <li><a href="#testimonials">|&nbsp TESTIMONIALS &nbsp</a></li>
+                    <li><a href="#case-study">|&nbsp CASE STUDY &nbsp</a></li>
                     <li><a href="#say-hello">|&nbsp SAY HELLO &nbsp</a></li>
                 </ul>
             </nav>
@@ -48,7 +90,7 @@
     <div class="who-we-are-content">
         <div class="who-we-are-title-logo-flex">
             <div>
-                <img src="images/novium-logo.svg">
+                <img src="images/novium-logo.svg" class="logo">
             </div>
             <div class="border-box"><h2 class="who-we-are-title title">WHO WE ARE</h2>
             </div>
@@ -178,14 +220,14 @@
     </div>
 </div>
 
-<div class="testimonial-container">
-    <a name="testimonials"></a>
-    <div class="testimonial-content">
-        <div class="testimonial-title-logo-flex">
+<div class="case-study-container">
+    <a name="case-study"></a>
+    <div class="case-study-content">
+        <div class="case-study-title-logo-flex">
             <div>
-                <img src="images/novium-logo.svg">
+                <img src="images/novium-logo.svg" class="logo">
             </div>
-            <div class="border-box"><h2 class="who-we-are-title title">TESTIMONIALS</h2>
+            <div class="border-box-case-study"><h2 class="case-study-title title">CASE STUDIES</h2>
             </div>
         </div>
 
@@ -235,35 +277,7 @@
     </div>
 </div>
 
-<div class="hello-container">
-    <div class="hello-content">
-        <a name="say-hello"></a>
-        <div class="hello-logo-margin">
-            <img src="images/novium-logo.svg">
-        </div>
-
-        <div class="hello-border-box"><h2 class="title">SAY HELLO</h2>
-        </div>
-
-        <div class="center-block">
-            <label for="user-name"></label>
-            <input type="text" placeholder="Name" required="required" class="mess-name">
-
-            <label for="user-email"></label>
-            <input type="text" placeholder="Email" required="required" class="mess-email">
-
-            <label for="user-subject"></label>
-            <input type="text" placeholder="Subject" required="required" class="mess-subject">
-
-            <div class="">
-                <textarea rows="6" placeholder="Enter your Message" class="mess-description"></textarea>
-            </div>
-        </div>
-        <div>
-            <button type="submit" class="submit-button">Send</button>
-        </div>
-    </div>
-</div>
+<script src="intro/js/custom.js" type="text/javascript"></script>
 </body>
 
 <footer>
@@ -281,9 +295,9 @@
                 </div>
 
                 <div class="footer-logos">
-                    <a href="https://www.linkedin.com/uas/login"><img src="images/linkedin-logo.svg" class="linkedin"></a>
-                    <a href="https://twitter.com/login"><img src="images/twitter-logo.svg"></a>
-                    <a href="https://en-gb.facebook.com/login"><img src="images/facebook-logo.svg" class="facebook"></a>
+                    <a href="https://www.linkedin.com/uas/login"><img src="images/linkedin-logo.svg" class="logo-linkedin"></a>
+                    <a href="https://twitter.com/login"><img src="images/twitter-logo.svg" class="logo-twitter"></a>
+                    <a href="https://en-gb.facebook.com/login"><img src="images/facebook-logo.svg" class="logo-facebook"></a>
                 </div>
             </div>
         </div>
