--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" type="text/css" href="main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
-
     <script type="text/javascript" src="js/main.js"></script>
     <!--easing plugin for smooth scroll-->
     <script src="intro/js/jquery.easing.1.3.min.js" type="text/javascript"></script>
@@ -67,7 +66,6 @@
                     <li><a href="#services">|&nbsp SERVICES &nbsp</a> </li>
                     <li><a href="#projects">|&nbsp PROJECTS &nbsp</a></li>
                     <li><a href="#case-study">|&nbsp CASE STUDY &nbsp</a></li>
-                    <li><a href="#say-hello">|&nbsp SAY HELLO &nbsp</a></li>
                 </ul>
             </nav>
         </div>
@@ -233,31 +231,31 @@
 
         <div class="boxes-flex">
             <div>
-                <div id="box1" class="">
+                <div id="box1">
                     <div class="target1"></div>
                 </div>
-                <h2 class="testimonial-title-marg grey-color">MOHAMAD SALEH</h2>
-                <p class="testimonial-text-marg grey-color">MIDDLE EAST AIRLINES</p>
+                <h2 class="case-study-title-marg grey-color">MOHAMAD SALEH</h2>
+                <p class="case-study-text-marg grey-color">MIDDLE EAST AIRLINES</p>
                 <p class="text-center"><img src="images/selector.png" class="selector1"></p>
                 <p class="click-mess1">Click to read about Mohamad Saleh experience with Novium Creative</p>
             </div>
 
             <div>
-                <div id="box2" class="">
+                <div id="box2">
                     <div class="target2"></div>
                 </div>
-                <h2 class="testimonial-title-marg grey-color">TANIA MANSOUR</h2>
-                <p class="testimonial-text-marg grey-color">PLACIO</p>
+                <h2 class="case-study-title-marg grey-color">TANIA MANSOUR</h2>
+                <p class="case-study-text-marg grey-color">PLACIO</p>
                 <p class="text-center"><img src="images/selector.png" class="selector2"></p>
                 <p class="click-mess2">Click to read about Mohamad Saleh experience with Novium Creative</p>
             </div>
 
             <div>
-                <div id="box3" class="">
+                <div id="box3">
                     <div class="target3"></div>
                 </div>
-                <h2 class="testimonial-title-marg grey-color">ZEIN AOUN</h2>
-                <p class="testimonial-text-marg grey-color">FINDERS</p>
+                <h2 class="case-study-title-marg grey-color">ZEIN AOUN</h2>
+                <p class="case-study-text-marg grey-color">FINDERS</p>
                 <p class="text-center"><img src="images/selector.png" class="selector3"></p>
                 <p class="click-mess3">Click to read about Mohamad Saleh experience with Novium Creative</p>
             </div>
@@ -276,8 +274,6 @@
         </div>
     </div>
 </div>
-
-<script src="intro/js/custom.js" type="text/javascript"></script>
 </body>
 
 <footer>
