fixing header height

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="nav-content">
             <div class="navbar-position">
                <img src="images/novium-logo.svg" class="logo">
-               <h1 class="inline novium-title">NOVIUM</h1>
+               <h1 class="novium-title">NOVIUM</h1>
            </div>
 
            <div class="navbar-buttons">
