--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
            <div class="navbar-buttons">
             <nav>
                 <ul>
-                    <li><a href="#who-we-are"> WHO WE ARE &nbsp</a></li>
-                    <li><a href="#services">|&nbsp SERVICES &nbsp</a> </li>
-                    <li><a href="#projects">|&nbsp PROJECTS &nbsp</a></li>
-                    <li><a href="#case-study">|&nbsp CASE STUDY &nbsp</a></li>
+                    <li><a href="#who-we-are"> Who We Are &nbsp</a></li>
+                    <li><a href="#services">|&nbsp Services &nbsp</a> </li>
+                    <li><a href="#projects">|&nbsp Projects &nbsp</a></li>
+                    <li><a href="#case-study">|&nbsp Case Studies &nbsp</a></li>
                 </ul>
             </nav>
         </div>
@@ -90,12 +90,13 @@
             <div>
                 <img src="images/novium-logo.svg" class="logo">
             </div>
-            <div class="border-box"><h2 class="who-we-are-title title">WHO WE ARE</h2>
+            <div class="border-box-wwa">
+                <h2 class="who-we-are-title title">WHO WE ARE</h2>
             </div>
         </div>
 
         <div class="who-we-are-content-flex">
-            <div>
+            <div class="objectives-box">
                 <img src="images/objective-img.svg" class="objective-img">
                 <h2 class="objective-title">OBJECTIVES</h2>
                 <div class="text-who-we-are-line-height">
@@ -103,7 +104,7 @@
                 </div>
             </div>
 
-            <div>
+            <div class="process-box">
                 <img src="images/process-img.svg" class="process-img">
                 <h2 class="process-title">PROCESS</h2>
                 <div class="text-who-we-are-line-height">
@@ -111,7 +112,7 @@
                 </div>
             </div>
 
-            <div>
+            <div class="delivery-box">
                 <img src="images/delivery-img.svg" class="delivery-img">
                 <h2 class="delivery-title">DELIVERY</h2>
                 <div class="text-who-we-are-line-height">
@@ -126,8 +127,8 @@
     <a name="services"></a>
     <div class="services-content">
         <div class="services-logo-title-flex">
-            <img src="images/logo-white.svg" class="logo-white">
-            <div class="border-box-services white-color">
+            <img src="images/logo-white.svg" class="logo-services">
+            <div class="border-box-services white-color-services">
                 <h2 class="title text-center">SERVICES</h2>
             </div>
         </div>
@@ -135,7 +136,7 @@
         <div class="ideation-creative-flex">
             <div class="ideation-col-flex">
                 <img src="images/ideation-img.svg" class="ideation-img">
-                <div class="white-color">
+                <div class="white-color-services">
                     <h2 class="ideation-title services-title">IDEATION</h2>
                 </div>
                 <div class="text-col-wid">
@@ -145,7 +146,7 @@
 
             <div class="creative-col-flex">
                 <img src="images/creative-img.svg" class="creative-img">
-                <div class="white-color">
+                <div class="white-color-services">
                     <h2 class="creative-title services-title">CREATIVE</h2>
                 </div>
                 <div class="text-col-wid">
@@ -157,7 +158,7 @@
         <div class="coding-hosting-flex">
             <div class="coding-col-flex">
                 <img src="images/coding-img.svg" class="coding-img">
-                <div class="white-color">
+                <div class="white-color-services">
                     <h2 class="coding-title services-title">CODING</h2>
                 </div>
                 <div class="text-col-wid">
@@ -167,7 +168,7 @@
 
             <div class="hosting-col-flex">
                 <img src="images/hosting-img.svg" class="hosting-img">
-                <div class="white-color">
+                <div class="white-color-services">
                     <h2 class="hosting-title services-title">HOSTING</h2>
                 </div>
                 <div class="text-col-wid">
@@ -185,7 +186,7 @@
     <div class="projects-content">
         <div class="projects-logo-title-flex">
             <div class="border-box-projects">
-                <img src="images/logo-white.svg" class="logo-white project-logo">
+                <img src="images/logo-white.svg" class="logo-projects">
                 <h2 class="projects-title title white-color">PROJECTS</h2>
             </div>
         </div>
@@ -195,7 +196,7 @@
                 <img src="images/project1-img.svg" class="project1-img">
                 <h2 class="project1-title white-color">PROJECT NAME 1</h2>
                 <div class="project1-text">
-                    <p class="white-color">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s industry's standard dummy text ever since the 1500s</p>
+                    <p class="white-color">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s industry's standard dummy text</p>
                 </div>
             </div>
 
@@ -203,7 +204,7 @@
                 <img src="images/project2-img.svg" class="project2-img ">
                 <h2 class="white-color project2-title">PROJECT NAME 2</h2>
                 <div class="project2-text">
-                    <p class="white-color">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s industry's standard dummy text ever since the 1500s industry's standard dummy</p>
+                    <p class="white-color">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s industry's standard dummy text ever since the 1500s </p>
                 </div>
             </div>
 
@@ -247,7 +248,7 @@
                 <h2 class="case-study-title-marg grey-color">TANIA MANSOUR</h2>
                 <p class="case-study-text-marg grey-color">PLACIO</p>
                 <p class="text-center"><img src="images/selector.png" class="selector2"></p>
-                <p class="click-mess2">Click to read about Mohamad Saleh experience with Novium Creative</p>
+                <p class="click-mess2">Click to read about Tania's experience with Novium Creative</p>
             </div>
 
             <div>
@@ -257,7 +258,7 @@
                 <h2 class="case-study-title-marg grey-color">ZEIN AOUN</h2>
                 <p class="case-study-text-marg grey-color">FINDERS</p>
                 <p class="text-center"><img src="images/selector.png" class="selector3"></p>
-                <p class="click-mess3">Click to read about Mohamad Saleh experience with Novium Creative</p>
+                <p class="click-mess3">Click to read about Zein's experience with Novium Creative</p>
             </div>
         </div>
 
